# cookiecutter-python-package

./: .gitignore  README.rst  cookiecutter.json
hooks/: pre_gen_project.py
{{cookiecutter.repo_name}}/: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  Pipfile  README.rst  appveyor.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
{{cookiecutter.repo_name}}/.azure-pipelines/templates/: run-tests.yml
{{cookiecutter.repo_name}}/.github/workflows/: ci.yml  publish_package.yml
{{cookiecutter.repo_name}}/docs/: conf.py
{{cookiecutter.repo_name}}/tasks/: __init__.py
