[build-system]
requires = ['setuptools>=40.8.0', 'wheel>=0.33.0']
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py36']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.pyre_configuration
  | _build
  | buck-out
  | build
  | dist
)
'''

[tool.towncrier]
package = '{{ cookiecutter.package_name }}'
package_dir = 'src'
filename = 'CHANGELOG.rst'
directory = 'news/'
title_format = '{version} ({project_date})'
issue_format = '`#{issue} <https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.repo_name }}/issues/{issue}>`_'
template = 'tasks/CHANGELOG.rst.jinja2'

  [[tool.towncrier.type]]
  directory = 'feature'
  name = 'Features'
  showcontent = true

  [[tool.towncrier.type]]
  directory = 'bugfix'
  name = 'Bug Fixes'
  showcontent = true

  [[tool.towncrier.type]]
  directory = 'trivial'
  name = 'Trivial Changes'
  showcontent = false

  [[tool.towncrier.type]]
  directory = 'removal'
  name = 'Removals and Deprecations'
  showcontent = true
